--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,22 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def permutation(n,k):\n",
-    "    None"
+    "    num = factorial(n)\n",
+    "    denom = factorial(n-k)\n",
+    "    return num/denom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    None"
+    "    num = factorial(n)\n",
+    "    denom = factorial(n-k)*factorial(k)\n",
+    "    return num/denom"
    ]
   },
   {
@@ -118,11 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "504.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "medal_top_3 = None\n",
+    "medal_top_3 = permutation(9,3)\n",
     "medal_top_3"
    ]
   },
@@ -135,11 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "84.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "scholarship_top_3 = None\n",
+    "scholarship_top_3 = combination(9,3)\n",
     "scholarship_top_3"
    ]
   },
@@ -173,12 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n",
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
-    "draw_cons = None\n",
-    "draw_vow = None"
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(4,3)\n",
+    "print(draw_cons)\n",
+    "print(draw_vow)"
    ]
   },
   {
@@ -190,11 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "252.0\n"
+     ]
+    }
+   ],
    "source": [
-    "sample = None"
+    "sample = combination(10,5)\n",
+    "print(sample)"
    ]
   },
   {
@@ -206,11 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23809523809523808\n"
+     ]
+    }
+   ],
    "source": [
-    "None"
+    "prob = (draw_cons*draw_vow)/sample\n",
+    "print(prob)"
    ]
   },
   {
@@ -229,12 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = None\n",
-    "draw_vow = None"
+    "draw_cons = combination(6,2)\n",
+    "draw_vow = combination(4,3)"
    ]
   },
   {
@@ -246,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_5_letters = None"
+    "order_5_letters = factorial(5)"
    ]
   },
   {
@@ -262,11 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In total, 7200.0 words with 2 consonants and 3 vowels can be formed from our existing letter pool.\n"
+     ]
+    }
+   ],
    "source": [
-    "total_words = None\n",
+    "total_words = draw_cons*draw_vow*order_5_letters\n",
     "print(\"In total,\",  total_words, \"words with 2 consonants and 3 vowels can be formed from our existing letter pool.\")"
    ]
   },
@@ -280,20 +343,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None"
+    "team_1 = combination(16,4)\n",
+    "team_2 = combination(12,4)\n",
+    "team_3 = combination(8,4)\n",
+    "team_4 = combination(4,4)\n",
+    "teams = (team_1 * team_2 * team_3 * team_4)/factorial(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2627625.0\n"
+     ]
+    }
+   ],
    "source": [
-    "None  # the answer is 2627625.0"
+    "print(teams)  # the answer is 2627625.0"
    ]
   },
   {
@@ -327,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
